# raven_serialize

./: .gitignore  CMakeLists.txt
prj/: build_config.lua  premake5.lua  project_config.lua
src/: ContextPath.cpp  ContextPath.hpp  Deserializer.hpp  SerializationContext.cpp  SerializationContext.hpp  Serializer.hpp  raven_serialize.hpp
src/actions/: CallObjectMutatorAction.cpp  CallObjectMutatorAction.hpp  CollectionInsertAction.cpp  CollectionInsertAction.hpp  CustomResolverAction.cpp  CustomResolverAction.hpp  IReaderAction.hpp  ReaderActionType.hpp  ResolvePointerAction.cpp  ResolvePointerAction.hpp
src/examples/: simple_serialize.cpp
src/ptr/: DefaultPointerFiller.cpp  DefaultPointerFiller.hpp  IPointerFiller.hpp  PropertyPointerFiller.cpp  PropertyPointerFiller.hpp
src/readers/: BaseReader.cpp  BaseReader.hpp  IReader.hpp  JsonReader.cpp  JsonReader.hpp  ReadResult.cpp  ReadResult.hpp
src/rs/: ICustomPropertyResolvePolicy.hpp  SerializationAdapter.hpp  SerializationKeywords.cpp  SerializationKeywords.hpp  SerializationMethod.hpp
src/rs/log/: ILogger.hpp  Log.cpp  Log.hpp
src/rttr/: Aliases.hpp  Class.hpp  Constructor.cpp  Constructor.hpp  CustomTypeResolver.hpp  GenericTypeSpecializer.hpp  Manager.cpp  Manager.hpp  PointerTypeResolver.hpp  Property.hpp  ProxyConstructor.hpp  ProxyConverter.hpp  StlGenericTypesSpecializers.hpp  Type.cpp  Type.hpp  TypeClass.hpp  TypeInitContext.hpp  TypeProxyData.hpp
src/writers/: IWriter.hpp  JsonReader.cpp  JsonReader.hpp  JsonWriter.cpp  JsonWriter.hpp  StreamJsonWriter.cpp  StreamJsonWriter.hpp
(+8 files in other folders)
